# vmm

./: .gitignore  Cargo.toml  rust-toolchain.toml  test.lox
crates/alloc/: Cargo.toml
crates/alloc/examples/: chained.rs  fast_vectors.rs  local_alloc.rs  local_string.rs  threaded.rs
crates/alloc/src/: align.rs  chain.rs  lib.rs  sync.rs  tests.rs  unsafe_alloc.rs
crates/assembly/: Cargo.toml  build.rs
crates/assembly/src/: diagnostics.rs  lib.rs  testing.rs
crates/assembly/src/ast/: block.rs  constants.rs  form.rs  ident.rs  immediate.rs  imports.rs  invocation_target.rs  mod.rs  module.rs  op.rs  visit.rs
crates/assembly/src/ast/attribute/: mod.rs  set.rs
crates/assembly/src/ast/instruction/: advice.rs  debug.rs  mod.rs  print.rs
crates/assembly/src/ast/procedure/: alias.rs  id.rs  inner.rs  mod.rs  name.rs  resolver.rs
crates/assembly/src/parser/: error.rs  grammar.lalrpop  lexer.rs  mod.rs  scanner.rs  token.rs
crates/assembly/src/sema/: context.rs  errors.rs  mod.rs
crates/assembly/tests/: ast.rs
crates/behavior/: Cargo.toml
crates/behavior/src/: events.rs  lib.rs  plugin.rs  prelude.rs  sequence.rs  transition.rs
crates/behavior/tests/: library.rs
crates/binary/: Cargo.toml
crates/binary/src/: lib.rs  tag.rs
crates/binary/src/de/: error.rs  mod.rs
crates/binary/src/ser/: error.rs  mod.rs
crates/binary/src/tag/: de.rs  mod.rs  ser.rs
crates/binary/src/value/: canonical.rs  integer.rs  mod.rs
crates/binary_ll/: Cargo.toml
crates/binary_ll/src/: decode.rs  encode.rs  header.rs  lib.rs  segments.rs  simple.rs  tag.rs
crates/checker/: Cargo.toml
crates/checker/src/: call_graph.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: advice.rs  errors.rs  kernel.rs  lib.rs  program.rs  sys_events.rs
crates/core/src/chiplets/: hasher.rs
crates/core/src/debuginfo/: location.rs  mod.rs  source_file.rs  source_manager.rs  span.rs
crates/core/src/mast/: merger.rs  mod.rs  multi_forest_node_iterator.rs  node_fingerprint.rs
crates/core/src/operations/: mod.rs
crates/core/src/stack/: inputs.rs  mod.rs  outputs.rs
crates/core/src/utils/: mod.rs
crates/cranelift_playground/: Cargo.toml
crates/cranelift_playground/src/: main.rs
crates/crypto/: Cargo.toml  expanded.rs
crates/crypto/src/: lib.rs
crates/crypto/src/hash/: mod.rs
crates/crypto/src/merkle/: empty_roots.rs  error.rs  mod.rs  path.rs  tree.rs
crates/crypto/src/rand/: mod.rs  rpo.rs  rpx.rs
crates/crypto/src/utils/: kv_map.rs  mod.rs
crates/dev_console/: Cargo.toml
crates/dev_console/src/: config.rs  lib.rs
crates/formatting/: Cargo.toml
crates/formatting/src/: hex.rs  lib.rs
crates/formatting/src/prettier/: document.rs  mod.rs  print.rs
crates/formatting/tests/: prettier.rs
crates/framework/: Cargo.toml
crates/framework/src/: lib.rs  prelude.rs  save.rs
crates/framework_kind/: Cargo.toml
crates/framework_kind/src/: instance.rs  lib.rs  prelude.rs
crates/framework_kind/tests/: library.rs
crates/framework_object/: Cargo.toml
crates/framework_object/src/: hierarchy.rs  instance.rs  lib.rs  name.rs  prelude.rs  rebind.rs
crates/framework_save/: Cargo.toml
crates/framework_save/src/: lib.rs  load.rs  prelude.rs  save.rs
crates/framework_save/tests/: basic.rs
crates/framework_tag/: Cargo.toml
crates/framework_tag/src/: lib.rs  prelude.rs
crates/geom/: Cargo.toml
crates/geom/src/: lib.rs  line.rs  scalar.rs  segment.rs  traits.rs  utils.rs
crates/goap_core/: Cargo.toml
crates/goap_core/benches/: long_plan.rs
crates/goap_core/src/: action.rs  compare.rs  datum.rs  effect.rs  goal.rs  lib.rs  local_state.rs  localstate.rs  mutator.rs  planner.rs  prelude.rs  simple.rs
crates/goap_core/tests/: library.rs
crates/goap_pathfinding/: Cargo.toml
crates/goap_pathfinding/benches/: algos-fill.rs  algos.rs  edmonds_karp.rs  matrices.rs
crates/goap_pathfinding/src/: grid.rs  kuhn_munkres.rs  lib.rs  noderefs.rs  prelude.rs  utils.rs
crates/goap_pathfinding/src/directed/: astar.rs  bfs.rs  count_paths.rs  cycle_detection.rs  dfs.rs  dijkstra.rs  edmonds_karp.rs  fringe.rs  idastar.rs  iddfs.rs  mod.rs  strongly_connected_components.rs  topological_sort.rs  yen.rs
crates/goap_pathfinding/src/matrix/: directions.rs  mod.rs
crates/goap_pathfinding/src/undirected/: cliques.rs  connected_components.rs  kruskal.rs  mod.rs  prim.rs
crates/goap_pathfinding/tests/: astar.rs  dijkstra-all.rs  edmonds_karp.rs
crates/graph/: Cargo.toml
crates/graph/src/: graph.rs  iter_format.rs  iter_utils.rs  lib.rs  unionfind.rs  util.rs
crates/graph/src/graph_impl/: mod.rs
crates/graph/tests/: unionfind.rs
crates/interpret/: Cargo.toml
crates/interpret/src/: lib.rs  profiler.rs
crates/interpret/src/tape/: mod.rs
crates/ir/: Cargo.toml
crates/ir/src/: block_instr.rs  bytes.rs  hint.rs  lib.rs  loop_instr.rs  offset.rs  ptr_movement.rs  simc.rs  simd_instr.rs  span_instr.rs  value.rs  write_instr.rs
crates/ir/src/offset/: mod.rs  ops.rs
crates/ir/src/super_instr/: mod.rs  scale.rs
crates/ir/src/utils/: io.rs  min_outputs.rs  mod.rs  offset_of.rs  offsetable.rs  ptr_movement.rs  sealed.rs  zero_cell.rs
crates/ir/tests/: fmt.rs
crates/jit/: Cargo.toml
crates/jit/src/: encode.rs  imms.rs  lib.rs  regs.rs
crates/length/: Cargo.toml
crates/length/src/: lib.rs
crates/length/src/inner/: mod.rs  serde.rs
crates/mem/: Cargo.toml
crates/mem/src/: lib.rs
crates/mimalloc/: Cargo.toml
crates/mimalloc/src/: extended.rs  lib.rs
crates/nbt/: Cargo.toml
crates/nbt/src/: compound.rs  conv.rs  deserializer.rs  error.rs  lib.rs  list.rs  snbt.rs  tag.rs  value.rs
crates/nbt/src/binary/: decode.rs  encode.rs  mod.rs  modified_utf8.rs  tests.rs
crates/nbt/src/serde/: de.rs  mod.rs  ser.rs  tests.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs  nbt_util.rs
crates/network/src/packets/: client.rs  mod.rs  server.rs
crates/num/: Cargo.toml
crates/num/src/: checked.rs  lib.rs  sat.rs  strict.rs  unchecked.rs  wrap.rs
crates/num/src/identity/: signed.rs  unsigned.rs
crates/num/src/ops/: mod.rs
(+718 files in other folders)
