lints.workspace = true

[package]
default-run = "vmm"
edition.workspace = true
license.workspace = true
name = "vmm"
rust-version.workspace = true
version.workspace = true

[features]
debug = [
    "bevy/asset_processor",
    "bevy/bevy_dev_tools",
    "bevy/bevy_remote",
    "bevy/file_watcher",
    "bevy/trace"
]
default = []

[dependencies]
bevy = { workspace = true, default-features = true }
bevy_enhanced_input = { version = "0.7" }
vmm_utils = { path = "crates/utils" }

[workspace]
members = ["crates/utils"]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.15", default-features = false }

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }

[workspace.lints.clippy]
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cognitive_complexity = "allow"
disallowed_methods = "deny"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
large_stack_arrays = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
range_plus_one = "allow"
redundant_pub_crate = "allow"
redundant_type_annotations = "warn"
significant_drop_tightening = "allow"
similar_names = "allow"
str_to_string = "deny"
struct_excessive_bools = "allow"
style = { level = "warn", priority = -1 }
todo = "warn"
try_err = "warn"
tuple_array_conversions = "allow"
undocumented_unsafe_blocks = "allow"
unimplemented = "allow"
unnecessary_min_or_max = "allow"
unnecessary_wraps = "allow"
unsafe_derive_deserialize = "allow"
used_underscore_binding = "allow"
useless_conversion = "allow"

[workspace.package]
edition = "2024"
license = "MIT or Apache-2.0"
rust-version = "1.85"
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
panic = "abort"

[workspace.metadata.docs.rs]
all-features = true
