lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm_alloc"
rust-version.workspace = true
version.workspace = true

[dependencies]
tap = { workspace = true, optional = true }

[features]
default = ["std"]
nightly = ["dep:tap"]
std = []

[[example]]
name = "local_alloc"
required-features = ["nightly"]

[[example]]
name = "local_string"
required-features = ["nightly"]

[[example]]
name = "threaded"
required-features = ["nightly", "std"]
