lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "bevy_behavior"
rust-version.workspace = true
version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_framework_kind.workspace = true
bevy_reflect.workspace = true
bevy_utils.workspace = true

[dev-dependencies]
anyhow.workspace = true
bevy = { workspace = true, default-features = true }
