lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm_binary_ll"
rust-version.workspace = true
version.workspace = true

[dependencies]
half = { version = "=2.4.1", default-features = false }
vmm_binary_io.workspace = true

[dev-dependencies]
hex = "0.4"

[features]
alloc = ["vmm_binary_io/alloc"]
std = ["alloc", "half/std", "vmm_binary_io/std"]
