lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm_checker"
rust-version.workspace = true
version.workspace = true

[dependencies]
bincode = { version = "1", features = ["i128"] }
itertools = "0.14"
serde = { version = "1", features = ["alloc", "derive", "rc"] }
petgraph = "0.8"
serde_json = "1"

[package.metadata.rust-analyzer]
rustc_private = true
