lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm-crypto"
rust-version.workspace = true
version.workspace = true

[features]
default = ["std"]
serde = ["dep:serde", "serde/alloc", "winter-math/serde"]
std = [
    "blake3/std",
    "dep:cc",
    "rand/std",
    "rand/std_rng",
    "winter-crypto/std",
    "winter-math/std",
    "winter-utils/std"
]

[dependencies]
blake3 = { version = "1.5", default-features = false }
num = { version = "0.4", default-features = false, features = [
    "alloc",
    "libm"
] }
num-complex = { version = "0.4", default-features = false }
rand = { version = "0.8", default-features = false }
rand-utils = { version = "0.11", package = "winter-rand-utils", optional = true }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", default-features = false, optional = true, features = [
    "derive"
] }
sha3 = { version = "0.10", default-features = false }
thiserror = { workspace = true, default-features = false }
winter-crypto = { version = "0.11", default-features = false }
winter-math.workspace = true
winter-utils = { version = "0.11", default-features = false }

[build-dependencies]
cc = { version = "1.2", optional = true, features = ["parallel"] }
glob = "0.3"

[dev-dependencies]
assert_matches = { version = "1.5", default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }
getrandom = { version = "0.2", features = ["js"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
proptest = "1.6"
rand-utils.workspace = true
rand_chacha = { version = "0.3", default-features = false }
seq-macro = { version = "0.3" }
