lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm_dev_console"
rust-version.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true, features = [] }
bevy_egui.workspace = true
chrono = "0.4"
fuzzy-matcher = { version = "0.3", optional = true }
logos = { version = "0.14", optional = true }
tracing-log = "0.2"
tracing-subscriber = "0.3"
web-time = "1.0"

[features]
builtin_parser = ["dep:logos"]
builtin_parser_completions = [
    "builtin_parser",
    "completions",
    "dep:fuzzy-matcher"
]
completions = []
default = ["builtin_parser_completions"]
