lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm-formatting"
rust-version.workspace = true
version.workspace = true

[dependencies]
unicode-width.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = ["std"]
std = []
