lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "bevy_framework_kind"
rust-version.workspace = true
version.workspace = true

[dependencies]
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_utils.workspace = true
bevy_framework_utils.workspace = true
