lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "bevy_framework_save"
rust-version.workspace = true
version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_framework_utils.workspace = true
bevy_hierarchy.workspace = true
bevy_reflect.workspace = true
bevy_scene = "0.15"
bevy_utils.workspace = true
ron = "0.8"
serde.workspace = true

[dev-dependencies]
anyhow.workspace = true
bevy = { workspace = true, default-features = true }
