lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "bevy_framework_tag"
rust-version.workspace = true
version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_utils.workspace = true
const-fnv1a-hash = "1.1"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
bevy = { workspace = true, default-features = true }
