lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm_geom"
rust-version.workspace = true
version.workspace = true

[dependencies]
arrayvec = { version = "0.7", default-features = false }
euclid = { version = "0.22", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
serde = { version = "1", default-features = false, features = [
    "derive"
], optional = true }

[features]
default = ["std"]
serde = ["euclid/serde", "dep:serde"]
std = ["arrayvec/std", "euclid/std", "num-traits/std", "serde?/std"]
