lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm_goap_core"
rust-version.workspace = true
version.workspace = true

[dependencies]
bevy_reflect = "0.15"
pathfinding = "4.10"
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
harness = false
name = "long_plan"
