lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "goap_core"
rust-version.workspace = true
version.workspace = true


[dependencies]
bevy_reflect.workspace = true
bevy_utils.workspace = true
goap_pathfinding = { path = "../goap_pathfinding" }
serde = { workspace = true, features = ["derive"] }
