lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm_graph"
rust-version.workspace = true
version.workspace = true

[dependencies]
dot-parser = { version = "0.5", optional = true }
dot-parser-macros = { version = "0.5", optional = true }
fixedbitset = { version = "0.5", default-features = false }
hashbrown = "^0.15"
indexmap = { version = "2.5", default-features = false }
quickcheck = { version = "0.8", default-features = false, optional = true }
rayon = { version = "1.5", optional = true }
serde = { version = "1", default-features = false, optional = true, features = [
    "derive"
] }
serde_repr = { version = "0.1", optional = true }

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"

[features]
default = ["graphmap", "matrix_graph", "stable_graph", "std"]
graphmap = []
matrix_graph = []
nightly = []
rayon = ["dep:rayon", "indexmap/rayon"]
serde = ["dep:serde", "dep:serde_repr"]
stable_graph = ["serde?/alloc"]
std = ["indexmap/std"]
