lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm_interpret"
rust-version.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive", "std"] }
tap.workspace = true
vmm_ir.workspace = true
vmm_num = { workspace = true, features = ["nightly"] }
vmm_program.workspace = true
vmm_span.workspace = true
vmm_tape.workspace = true
vmm_utils = { workspace = true, features = ["insert_or_push"] }

[features]
nightly = []
