lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm_ir"
rust-version.workspace = true
version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
serde = { workspace = true, features = [
    "alloc",
    "derive"
], default-features = false }
vmm_num.workspace = true
vmm_span.workspace = true
vmm_utils = { workspace = true, features = ["get_or_zero"] }

[features]
arbitrary = ["dep:arbitrary"]
