lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm-mem"
rust-version.workspace = true
version.workspace = true

[dependencies]
arc-swap = { version = "1", default-features = false, optional = true }
bitflags = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
thiserror = { version = "2", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "sysinfoapi"] }

[features]
default = ["rawfd", "std"]
rawfd = ["dep:libc"]
std = ["bitflags?/std", "libc?/std"]
