lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm_nbt"
rust-version.workspace = true
version.workspace = true

[dependencies]
byteorder = { version = "1.5", optional = true }
cesu8 = { version = "1.1", optional = true }
indexmap = { version = "2", optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
uuid = { version = "1.8", optional = true }
vmm_ident = { path = "../ident", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
serde_json = "1"

[features]
binary = ["dep:byteorder", "dep:cesu8"]
preserve_order = ["dep:indexmap"]
serde = ["dep:serde", "dep:thiserror", "indexmap?/serde"]
snbt = []
vmm_ident = ["dep:vmm_ident"]
