lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm_nbt"
rust-version.workspace = true
version.workspace = true

[dependencies]
byteorder = { version = "1.5", optional = true }
cesu8 = { version = "1.1", optional = true }
indexmap = { version = "2", optional = true }
java_string = { path = "../java_string", optional = true }
serde = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
vmm_ident = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
pretty_assertions = "1.4"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[features]
binary = ["dep:byteorder", "dep:cesu8"]
java_string = ["dep:java_string"]
preserve_order = ["dep:indexmap"]
serde = ["dep:serde", "indexmap?/serde"]
snbt = []
vmm_ident = ["dep:vmm_ident"]
