lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "vmm_num"
rust-version.workspace = true
version.workspace = true

[dependencies]
arbitrary = { version = "1", optional = true }
serde = { workspace = true, default-features = false }

[features]
arbitrary = ["dep:arbitrary"]
nightly = []
